--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
+name=SimpleBroadcast
+id=simplebroadcast
 group=com.gmail.trentech
-description=Broadcasting plugin
 version=0.1.1
+description=Broadcasting plugin
+author=TrenTech
+url=http://github.com/TrenTech/SimpleBroadcast
 apiVersion=5.0.0-SNAPSHOT
