--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ configurations {
 
 dependencies {
     compile "org.spongepowered:spongeapi:${project.apiVersion}"
-	compile "com.github.TrenTech:SimpleTags:-SNAPSHOT"
+	compile "com.github.TrenTech:SimpleTags:8d2ab6a868"
+	compile "com.github.TrenTech:HelpMe:be2880c0d4"
     shade "com.github.Flibio:Updatifier:-SNAPSHOT:api"
 }
 
