--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ configurations {
 dependencies {
     compile "org.spongepowered:spongeapi:${project.apiVersion}"
 	compile "com.github.TrenTech:SimpleTags:8d2ab6a868"
-	compile "com.github.TrenTech:HelpMe:be2880c0d4"
+	compile "com.github.TrenTech:HelpMe:0.2.1"
     shade "com.github.Flibio:Updatifier:-SNAPSHOT:api"
 }
 
