--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ version=0.1.4
 description=Broadcasting plugin
 author=TrenTech
 url=http://github.com/TrenTech/SimpleBroadcast
-apiVersion=5.0.0
+apiVersion=5.1.0-SNAPSHOT
